# PDBview

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
pdbview/: __init__.py  cli.py
pdbview/model/: __init__.py  binding_site.py  ligand.py  protein.py
pdbview/parser/: __init__.py  fetch.py  pdb_metadata.py  pdb_parser.py
pdbview/render/: __init__.py  braille.py  camera.py  colors.py
pdbview/ui/: __init__.py  app.py  info_panel.py  ligand_panel.py  viewport.py
